<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FireOS8 Settings Hub</string>
    <string name="version_format">Version %1$s</string>
    <string name="section_label">SYSTEM SETTINGS</string>
    <string name="subtitle">Fire OS 8 settings</string>
    <string name="display_sounds">Display, Sound &amp; HDMI-CEC</string>
    <string name="network">Network &amp; Wi-Fi</string>
    <string name="apps">Apps &amp; Notifications</string>
    <string name="controllers">Controllers &amp; Bluetooth</string>
    <string name="device">Device Information</string>
    <string name="account">My Account</string>
    <string name="accessibility">Accessibility</string>
    <string name="manage_apps">Manage Apps</string>
    <string name="credits">Made By GhostDragon5 | Github: https://github.com/GhostDragon5/</string>
    <string name="close">Close</string>
    <string name="theme">Theme</string>
    <string name="theme_graphite">Graphite</string>
    <string name="theme_ocean">Ocean</string>
    <string name="theme_light">Light</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="choose_theme">Choose theme</string>
    <string name="edit_hint">Select a tile | OK: start/save move | Fast forward: change size | Back: finish</string>
    <string name="root_error">Root access is unavailable or was denied.</string>
    <string name="root_not_available">Root access is unavailable or was denied.</string>
    <string name="intent_failed">This setting could not be opened.</string>
    <string name="edit_mode_started">Edit mode started.</string>
    <string name="edit_mode_finished">Tile layout saved.</string>
    <string name="tile_size_changed">Tile size changed.</string>
    <string name="move_tile">Use the D-Pad to move the tile. Press OK to save.</string>
    <string name="position_saved">Tile position saved.</string>
    <string name="update_available">Update available</string>
    <string name="update_message">Version %1$s is available. Download and install now?</string>
    <string name="changelog">What\'s new</string>
    <string name="no_changelog">No changelog was provided for this release.</string>
    <string name="update">Update</string>
    <string name="not_now">Not now</string>
    <string name="update_downloading">Downloading update...</string>
    <string name="update_installed">Update installed. Restart the app.</string>
    <string name="update_failed">Update failed.</string>
    <string name="overlay_permission_required">Bitte erlaube "Über anderen Apps einblenden", damit das Dashboard über dem Launcher schweben kann.</string>
</resources>
