<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="72dp"
        android:layout_marginVertical="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_label"
            android:textColor="@color/accent"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textColor="@color/title"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/subtitle"
            android:textColor="@color/subtitle"
            android:textSize="17sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:useDefaultMargins="false">

            <Button
                android:id="@+id/button_display_sounds"
                style="@style/Widget.FireOS8SettingsHub.Button"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:text="@string/display_sounds" />

            <Button
                android:id="@+id/button_network"
                style="@style/Widget.FireOS8SettingsHub.Button"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:text="@string/network" />

            <Button
                android:id="@+id/button_apps"
                style="@style/Widget.FireOS8SettingsHub.Button"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:text="@string/apps" />

            <Button
                android:id="@+id/button_controllers"
                style="@style/Widget.FireOS8SettingsHub.Button"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:text="@string/controllers" />

            <Button
                android:id="@+id/button_device"
                style="@style/Widget.FireOS8SettingsHub.Button"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:text="@string/device" />

            <Button
                android:id="@+id/button_account"
                style="@style/Widget.FireOS8SettingsHub.Button"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:text="@string/account" />

            <Button
                android:id="@+id/button_accessibility"
                style="@style/Widget.FireOS8SettingsHub.Button"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:text="@string/accessibility" />
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/credits"
                android:textColor="@color/subtitle"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_close"
                style="@style/Widget.FireOS8SettingsHub.CloseButton"
                android:text="@string/close" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
